Adjusting line-height

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="base_35">
                     <h2 class="title_xiaomi-redmi-buds-19_02 f-thin">*As imagens desta página são apenas para fins de ilustração e podem não ser a representação exata do produto. 
                         Os parâmetros do produto são apenas para referência. Alguns parâmetros do produto podem variar devido a fatores externos, 
                         como ambiente e diferenças nos sistemas de smartphones. Consulte o produto real para obter detalhes. <br> <br>
