Adjusting line-height

--- a/index.html
+++ b/index.html
@@ -295,9 +295,8 @@
                        
                         <div> <h2 class="title_xiaomi-redmi-buds-16_01 f-medium"> Personalize facilmente seus fones de ouvido </h2> </div>
                         <div> <h2 class="title_xiaomi-redmi-buds-16_02 f-thin"> Baixe o Aplicativo Xiaomi Earbuds para ajustar o cancelamento de ruído e o controle de toque em seus fones de ouvido sem fio Redmi Buds 4. 
-                                Você está no controle — ajuste as configurações para obter o áudio ideal e instale atualizações on-line de firmware.  
-                                <br> <br> Há ainda mais recursos para você descobrir. </h2> 
-                        </div>
+                                Você está no controle — ajuste as configurações para obter o áudio ideal e instale atualizações on-line de firmware. </h2> </div>
+                        <div> <h2 class="title_xiaomi-redmi-buds-16_02 f-thin"> Há ainda mais recursos para você descobrir. </h2> </div>
                         <img class="img_base_31" src="./assets/media/Overview_M1080_19-icon-google.webp" alt="icon-google"> 
                     </div>
                 </div>
